firmware/lib/chapro.h


    typedef long int32_t;

    typedef void **CHA_PTR;


    typedef struct
    {
        double attack;  // attack time (ms)
        double release; // release time (ms)
        double fs;      // sampling rate (Hz)
        double maxdB;   // maximum signal (dB SPL)
        double tkgain;  // compression-start gain
        double tk;      // compression-start kneepoint
        double cr;      // compression ratio
        double bolt;    // broadband output limiting threshold
        // processing parameters
        double td;  // target delay
        int32_t nz; // filter order
        int32_t nw; // window size
        int32_t wt; // window type: 0=Hamming, 1=Blackman
    } CHA_WDRC;

    typedef struct
    {
        int32_t cm;           // compression mode
        int32_t nc;           // number of channels
        double fc[CLS_MXCH];  // center frequency
        double bw[CLS_MXCH];  // bandwith
        double Gcs[CLS_MXCH]; // gain at compression start
        double Gcm[CLS_MXCH]; // gain at compression middle
        double Gce[CLS_MXCH]; // gain at compression end
        double Gmx[CLS_MXCH]; // maximum gain
        double Lcs[CLS_MXCH]; // level at compression start
        double Lcm[CLS_MXCH]; // level at compression middle
        double Lce[CLS_MXCH]; // level at compression end
        double Lmx[CLS_MXCH]; // maximum output level
    } CHA_CLS;


    typedef struct
    {
        // processing
        double sr; // sampling rate (Hz)
        // FIR
        int32_t nz; // number of  poles & zeros
        int32_t nw; // window size
        int32_t wt; // window type: 0=Hamming, 1=Blackman
        // IIR
        double fd;  // estimated filter delay (ms)
        double gd;  // target delay (ms)
        double gn;  // flat gain (dB)
        int32_t nm; // number of frequency bands below 1 kHz
        int32_t po; // number of bands per octave above 1 kHz
        int32_t no; // gammatone filter order
    } CHA_ICMP;


    /*****************************************************/

    typedef struct
    {
        // simulation parameters
        double fbg; // simulated-feedback gain
        // AFC parameters
        double rho;   // forgetting factor
        double eps;   // power threshold
        double mu;    // step size
        double alf;   // band-limit update
        int32_t afl;  // adaptive-filter length
        int32_t wfl;  // whiten-filter length
        int32_t pfl;  // pre-emphasis-filter length
        int32_t fbl;  // simulated-feedback length
        int32_t hdel; // output/input hardware delay
        int32_t pup;  // band-limit update period
        // feedback filter buffers
        float *efbp; // estimated-feedback buffer pointer
        float *sfbp; // simulated-feedback buffer pointer
        float *wfrp; // whiten-filter buffer pointer
        float *ffrp; // pre-emphasis-filter buffer pointer
        // quality metric buffers & parameters
        float *qm;     // quality-metric buffer pointer
        int32_t *iqmp; // quality-metric index pointer
        int32_t nqm;   // quality-metric buffer size
        int32_t iqm;   // quality-metric index
        int32_t sqm;   // save quality metric ?
        CHA_PTR pcp;   // previous CHA_PTR
    } CHA_AFC;