firmware/src/sw_dsp/chapro.rs

#[test]
fn bindgen_test_layout_CHA_WDRC() {
    const UNINIT: ::core::mem::MaybeUninit<CHA_WDRC> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<CHA_WDRC>(),
        88usize,
        concat!("Size of: ", stringify!(CHA_WDRC))
    );
    assert_eq!(
        ::core::mem::align_of::<CHA_WDRC>(),
        8usize,
        concat!("Alignment of ", stringify!(CHA_WDRC))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).attack) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_WDRC),
            "::",
            stringify!(attack)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).release) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_WDRC),
            "::",
            stringify!(release)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).fs) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_WDRC),
            "::",
            stringify!(fs)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).maxdB) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_WDRC),
            "::",
            stringify!(maxdB)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).tkgain) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_WDRC),
            "::",
            stringify!(tkgain)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).tk) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_WDRC),
            "::",
            stringify!(tk)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).cr) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_WDRC),
            "::",
            stringify!(cr)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).bolt) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_WDRC),
            "::",
            stringify!(bolt)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).td) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_WDRC),
            "::",
            stringify!(td)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).nz) as usize - ptr as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_WDRC),
            "::",
            stringify!(nz)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).nw) as usize - ptr as usize },
        76usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_WDRC),
            "::",
            stringify!(nw)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).wt) as usize - ptr as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_WDRC),
            "::",
            stringify!(wt)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CHA_CLS {
    pub cm: i32,
    pub nc: i32,
    pub fc: [f64; 32usize],
    pub bw: [f64; 32usize],
    pub Gcs: [f64; 32usize],
    pub Gcm: [f64; 32usize],
    pub Gce: [f64; 32usize],
    pub Gmx: [f64; 32usize],
    pub Lcs: [f64; 32usize],
    pub Lcm: [f64; 32usize],
    pub Lce: [f64; 32usize],
    pub Lmx: [f64; 32usize],
}
#[test]
fn bindgen_test_layout_CHA_CLS() {
    const UNINIT: ::core::mem::MaybeUninit<CHA_CLS> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<CHA_CLS>(),
        2568usize,
        concat!("Size of: ", stringify!(CHA_CLS))
    );
    assert_eq!(
        ::core::mem::align_of::<CHA_CLS>(),
        8usize,
        concat!("Alignment of ", stringify!(CHA_CLS))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).cm) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_CLS),
            "::",
            stringify!(cm)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).nc) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_CLS),
            "::",
            stringify!(nc)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).fc) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_CLS),
            "::",
            stringify!(fc)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).bw) as usize - ptr as usize },
        264usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_CLS),
            "::",
            stringify!(bw)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).Gcs) as usize - ptr as usize },
        520usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_CLS),
            "::",
            stringify!(Gcs)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).Gcm) as usize - ptr as usize },
        776usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_CLS),
            "::",
            stringify!(Gcm)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).Gce) as usize - ptr as usize },
        1032usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_CLS),
            "::",
            stringify!(Gce)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).Gmx) as usize - ptr as usize },
        1288usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_CLS),
            "::",
            stringify!(Gmx)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).Lcs) as usize - ptr as usize },
        1544usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_CLS),
            "::",
            stringify!(Lcs)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).Lcm) as usize - ptr as usize },
        1800usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_CLS),
            "::",
            stringify!(Lcm)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).Lce) as usize - ptr as usize },
        2056usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_CLS),
            "::",
            stringify!(Lce)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).Lmx) as usize - ptr as usize },
        2312usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_CLS),
            "::",
            stringify!(Lmx)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CHA_ICMP {
    pub sr: f64,
    pub nz: i32,
    pub nw: i32,
    pub wt: i32,
    pub fd: f64,
    pub gd: f64,
    pub gn: f64,
    pub nm: i32,
    pub po: i32,
    pub no: i32,
}
#[test]
fn bindgen_test_layout_CHA_ICMP() {
    const UNINIT: ::core::mem::MaybeUninit<CHA_ICMP> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<CHA_ICMP>(),
        64usize,
        concat!("Size of: ", stringify!(CHA_ICMP))
    );
    assert_eq!(
        ::core::mem::align_of::<CHA_ICMP>(),
        8usize,
        concat!("Alignment of ", stringify!(CHA_ICMP))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).sr) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_ICMP),
            "::",
            stringify!(sr)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).nz) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_ICMP),
            "::",
            stringify!(nz)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).nw) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_ICMP),
            "::",
            stringify!(nw)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).wt) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_ICMP),
            "::",
            stringify!(wt)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).fd) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_ICMP),
            "::",
            stringify!(fd)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).gd) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_ICMP),
            "::",
            stringify!(gd)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).gn) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_ICMP),
            "::",
            stringify!(gn)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).nm) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_ICMP),
            "::",
            stringify!(nm)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).po) as usize - ptr as usize },
        52usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_ICMP),
            "::",
            stringify!(po)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).no) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_ICMP),
            "::",
            stringify!(no)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CHA_AFC {
    pub fbg: f64,
    pub rho: f64,
    pub eps: f64,
    pub mu: f64,
    pub alf: f64,
    pub afl: i32,
    pub wfl: i32,
    pub pfl: i32,
    pub fbl: i32,
    pub hdel: i32,
    pub pup: i32,
    pub efbp: *mut f32,
    pub sfbp: *mut f32,
    pub wfrp: *mut f32,
    pub ffrp: *mut f32,
    pub qm: *mut f32,
    pub iqmp: *mut i32,
    pub nqm: i32,
    pub iqm: i32,
    pub sqm: i32,
    pub pcp: CHA_PTR,
}
